--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
-#quote-list {
-  padding: 20px;
+
+
+blockquote {
+  margin: 10;
+}
+
+blockquote p {
+  padding: 15px;
+  background: #eee;
+  border-radius: 5px;
+}
+
+blockquote p::before {
+  content: '\201C';
+}
+
+blockquote p::after {
+  content: '\201D';
 }
